[tool.poetry]
name = "censusdis-intro"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"
packages = [{include = "censusdis_intro"}]

[tool.poetry.dependencies]
python = "^3.11"
censusdis = "^1.1.5"
jupyterlab = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
